apply plugin: 'java'
apply plugin: 'idea'

version =  '2.0'

repositories {
    mavenCentral()
}

wrapper {
    gradleVersion = '6.9.4'
}

sourceCompatibility = 1.8
targetCompatibility = 1.8
